fixed css code spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
-.main-container{
+.main-container {
 	width: 100%;
 }
+
 .jumbotron {
 	color: #D2D7D3;
 	font-size: 65px;
@@ -9,44 +10,49 @@
 	background-color: #552d81;
 	padding: 20px 0px 20px 0px; 
 }
-#really{
+
+#really {
 	font-size: 85px;
 	text-align: center;
 	padding: 0px 0px 10px 0px;
 }
 
-#signOut{
+#signOut {
 	display: none;
 	vertical-align: top;
 }
-#signOutDiv{
+
+#signOutDiv {
 	text-align: right;
 }
 
-.dropdown-toggle{
+.dropdown-toggle {
 	float: left;
 	margin: 0px 0px 0px 10px;
 
 }
-#currentMood{
+
+#currentMood {
 	background-color: #330252;
 }
 
-.col-md-2{
+.col-md-2 {
 	float: left;
 }
 
-.col-lg-6{
+.col-lg-6 {
 	height: 400px;
 }
 
-#gifDiv{
+#gifDiv {
 	background-color: transparent;
 }
-#vidDiv{
+
+#vidDiv {
 	background-color: transparent;
 }
-.col-lg-12{
+
+.col-lg-12 {
 	text-align: center;
 	clear: both;
 }
@@ -57,14 +63,15 @@
 	
 }
 
-.panel-heading{
+.panel-heading {
 	text-align: center;
 	background-color: #552d81;
-
 }
+
 .panel-body {
 	text-align: center;
 }
+
 #addMoodButton {
 	background-color: #330252;
 }
@@ -139,13 +146,15 @@ th {
 	.panel-heading, .panel-body, #vidDiv, #gifDiv { 
 		width: auto;
 	}
+
 	.alert-danger{
 		float: right;
 	}
-.col-lg-6{
-	height: 400px;
-	width: 540px;
- }
+
+	.col-lg-6{
+		height: 400px;
+		width: 540px;
+	 }
 
 }
 
@@ -154,22 +163,27 @@ th {
 		width: auto;
 	}
 
-.alert-danger{
+	.alert-danger{
 		float: left;
 	}
-.col-lg-6 {
-	height: 400px;
-	width: 440px;
+
+	.col-lg-6 {
+		height: 400px;
+		width: 440px;
+	}
 }
 
 @media screen and (max-width: 640px) {
 	.panel-heading, .panel-body, #vidDiv, #gifDiv { 
 		width: auto;
 	}
+
 	.alert-danger{
 		float: left;
 	}
-.col-lg-6 {
-	height: 400px;
-	width: 340px;
+
+	.col-lg-6 {
+		height: 400px;
+		width: 340px;
+	}
 }
